Load Telegram WebApp SDK explicitly

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8" />
   <title>Telegram Mini App – initData Dump</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- REQUIRED: Telegram Mini App SDK -->
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+
   <style>
     body {
       font-family: monospace;
@@ -33,7 +37,6 @@
     }
 
     const tg = Telegram.WebApp;
-
     tg.ready();
 
     const dump = {
